<resources>
    <string name="app_name">MOGE</string>
    
    <string name="login_explanation">사용하시기 전에 로그인은 필수!</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="or">또는</string>
    <string name="signup_with_email">이메일로 회원가입하기</string>
    
    <string name="agree_tos_explanation">서비스 이용 약관에\n동의해 주세요.</string>
    <string name="agree_all">아래 약관에 모두 동의합니다.</string>
    <string name="agree_age">만 14세 이상입니다.</string>
    <string name="agree_tos">서비스 이용 약관에 동의합니다.</string>
    <string name="agree_pi">개인정보 수집 및 이용에 동의합니다.</string>
    <string name="agree_third_party">제3자 정보 이용에 동의합니다.</string>
    <string name="agree_essential">(필수)</string>
    <string name="agree_choice">(선택)</string>
    <string name="next">다음</string>

    <string name="email_explanation">아이디로 사용할\n이메일을 입력해 주세요.</string>
    <string name="email_validation">이메일 인증하기</string>
    <string name="email_error">* 이메일 형식을 확인해주세요.</string>
    <string name="email_valid_explanation">이메일로 발송된\n코드를 입력해 주세요.</string>
    <string name="authentication_code">인증코드</string>
    <string name="password_explanation">비밀번호를 입력해 주세요.</string>
    <string name="password_formatting">영문, 숫자를 포함한 5자 이상의 비밀번호를 입력해주세요.</string>
    <string name="password_validation">비밀번호 확인</string>
    <string name="password_error">* 비밀번호는 5자 이상이어야 합니다.</string>
    <string name="password_re_error">* 비밀번호가 일치하지 않습니다.</string>
    <string name="nickname_explanation">활동하실 별명을 입력해 주세요.</string>
    <string name="nickname_formatting">1자 이상 - 8자 이하의 별명을 입력해주세요.</string>
    <string name="nickname_validation">별명 (중복불가)</string>
    
    <string name="category_explanation">관심있는 키워드를\n3개 선택해주세요.</string>
    <string name="category_new">신조어</string>
    <string name="category_spelling">맞춤법</string>
    <string name="category_nonsense">넌센스</string>
    <string name="category_idiom">사자성어</string>
    <string name="category_word">단어 의미</string>
    <string name="finish_signup">회원가입 완료</string>
    <string name="sir">님!</string>
    <string name="finish_signup_explanation">회원가입이 완료되었어요.</string>
    <string name="start_moge">머지 시작하기</string>

    <string name="my_quiz_nothing">제작하신 퀴즈가 없습니다.\n퀴즈를 만들어 볼까요?</string>
    <string name="my_quiz_create">퀴즈 제작하러 가기</string>
    <string name="my_feed_nothing">제작하신 피드가 없습니다.\n피드를 등록해보세요.</string>
    <string name="my_feed_create">피드 등록하러 가기</string>
    <string name="my_fav_nothing">\‘좋아요\'한 퀴즈가 없습니다.\n마음에 드는 퀴즈에 \‘좋아요\' 표시를 해보세요.</string>
    <string name="my_fav_create">퀴즈 둘러보러 가기</string>

    <string name="search_hint">원하는 키워드를 검색해 보세요.</string>
    <string name="search_view_topten">조회수 TOP 10</string>
    <string name="search_like_topten">좋아요 TOP 10</string>
    <string name="search_latest">최신순</string>
    <string name="search_views">조회순</string>
    <string name="search_likes">인기순</string>
    <string name="search_all_view">모두보기</string>
    <string name="view_all_header">퀴즈 모음</string>
    <string name="search_keyword">추천 키워드</string>
    <string name="search_nothing">검색 결과가 없습니다.</string>
    
    <string name="shop_best">인기</string>
    <string name="shop_cafe">카페</string>
    <string name="shop_food">외식</string>
    <string name="shop_culture">문화</string>
    <string name="shop_goods">굿즈</string>
</resources>
