<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    android:background="@color/primary_main">

    <TextView
        android:id="@+id/login_explanation_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/login_explanation"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="14dp"
        android:textSize="14dp"
        android:hint="@string/email"
        android:textColorHint="@color/brown_light"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_login_edittext"
        android:textCursorDrawable="@drawable/login_edittext_cursor"
        app:layout_constraintTop_toBottomOf="@id/login_explanation_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/login_email_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        tools:text="@string/password_error"
        android:textSize="14dp"
        android:textColor="@color/alert_color"
        app:layout_constraintTop_toBottomOf="@id/login_email_et"
        app:layout_constraintStart_toStartOf="@id/login_email_et"
        android:visibility="gone" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="14dp"
        android:layout_marginTop="16dp"
        android:textSize="14dp"
        android:hint="@string/password"
        android:textColorHint="@color/brown_light"
        android:inputType="textPassword"
        android:background="@drawable/bg_login_edittext"
        android:textCursorDrawable="@drawable/login_edittext_cursor"
        app:layout_constraintTop_toBottomOf="@id/login_email_error_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/login_pwd_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        tools:text="@string/password_error"
        android:textSize="14dp"
        android:textColor="@color/alert_color"
        app:layout_constraintTop_toBottomOf="@id/login_password_et"
        app:layout_constraintStart_toStartOf="@id/login_password_et"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn_select"
        android:stateListAnimator="@null"
        app:layout_constraintTop_toBottomOf="@id/login_pwd_error_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <LinearLayout
        android:id="@+id/login_or_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/login_social_cl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:id="@+id/login_or_left_divider"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/login_or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/or"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/brown_light" />

        <View
            android:id="@+id/login_or_right_divider"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="@color/divider" />
        
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_social_cl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_signup_email_cl" >

        <ImageView
            android:id="@+id/login_kakao_iv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/icon_login_kakao"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/login_naver_iv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/icon_login_naver"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_kakao_iv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_signup_email_cl"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/bg_login_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/login_signup_email_iv"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/icon_email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/login_signup_email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/signup_with_email"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/login_signup_email_iv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>