<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tos_back_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/tos_back_iv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tos_back_cl">

        <TextView
            android:id="@+id/tos_paging_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="1"
            android:textSize="20dp"
            android:textColor="@color/gray_dark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tos_paging_total_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/5"
            android:textSize="20dp"
            android:textColor="@color/gray"
            app:layout_constraintTop_toTopOf="@id/tos_paging_tv"
            app:layout_constraintStart_toEndOf="@id/tos_paging_tv"/>

        <TextView
            android:id="@+id/tos_explanation_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/agree_tos_explanation"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tos_agree_all_cy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tos_explanation_tv">

            <CheckBox
                android:id="@+id/tos_agree_all_cb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:button="@null"
                android:background="@drawable/bg_tos_checkbox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tos_agree_all_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/agree_all"
                android:textSize="14dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tos_agree_all_cb"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:id="@+id/tos_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tos_agree_all_cy" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tos_agree_age_cy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tos_divider">

            <CheckBox
                android:id="@+id/tos_agree_age_cb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:button="@null"
                android:background="@drawable/bg_tos_checkbox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tos_agree_age_essential_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/agree_essential"
                android:textSize="14dp"
                android:textColor="@color/light_brown"
                app:layout_constraintStart_toEndOf="@id/tos_agree_age_cb"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tos_agree_age_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/agree_age"
                android:textSize="14dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tos_agree_age_essential_tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tos_agree_tos_cy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tos_agree_age_cy">

            <CheckBox
                android:id="@+id/tos_agree_tos_cb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:button="@null"
                android:background="@drawable/bg_tos_checkbox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tos_agree_tos_essential_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/agree_essential"
                android:textSize="14dp"
                android:textColor="@color/light_brown"
                app:layout_constraintStart_toEndOf="@id/tos_agree_tos_cb"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tos_agree_tos_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/agree_tos"
                android:textSize="14dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tos_agree_tos_essential_tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tos_agree_pi_cy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tos_agree_tos_cy">

            <CheckBox
                android:id="@+id/tos_agree_pi_cb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:button="@null"
                android:background="@drawable/bg_tos_checkbox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tos_agree_pi_essential_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/agree_essential"
                android:textSize="14dp"
                android:textColor="@color/light_brown"
                app:layout_constraintStart_toEndOf="@id/tos_agree_pi_cb"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tos_agree_pi_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/agree_pi"
                android:textSize="14dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tos_agree_pi_essential_tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tos_agree_third_party_cy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tos_agree_pi_cy">

            <CheckBox
                android:id="@+id/tos_agree_third_party_cb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:button="@null"
                android:background="@drawable/bg_tos_checkbox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tos_agree_third_party_choice_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/agree_choice"
                android:textSize="14dp"
                android:textColor="@color/light_brown"
                app:layout_constraintStart_toEndOf="@id/tos_agree_third_party_cb"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tos_agree_third_party_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/agree_third_party"
                android:textSize="14dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tos_agree_third_party_choice_tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/tos_next_btn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="96dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/next"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn_select"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>