<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.search.viewAll.ViewAllFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_all_header_cl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        
        <ImageView
            android:id="@+id/view_all_header_back_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_back_btn_black"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/view_all_header_cate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:text="신조어"
            android:textSize="18dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/view_all_header_back_iv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/view_all_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/view_all_header"
            android:textSize="18dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/view_all_header_cate_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_all_boards_sorting_cl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/view_all_header_cl"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/view_all_boards_latest_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/search_latest"
            android:textColor="@color/gray_dark"
            android:textSize="14dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view_all_boards_first_divider"
            android:layout_width="1dp"
            android:layout_height="12dp"
            android:background="@color/cate_divider"
            app:layout_constraintStart_toEndOf="@id/view_all_boards_latest_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/view_all_boards_views_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/search_views"
            android:textColor="@color/gray_light"
            android:textSize="14dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/view_all_boards_first_divider"/>

        <View
            android:id="@+id/view_all_boards_second_divider"
            android:layout_width="1dp"
            android:layout_height="12dp"
            android:background="@color/cate_divider"
            app:layout_constraintStart_toEndOf="@id/view_all_boards_views_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/view_all_boards_likes_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/search_likes"
            android:textColor="@color/gray_light"
            android:textSize="14dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/view_all_boards_second_divider"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/view_all_boards_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_all_boards_sorting_cl"
        android:overScrollMode="never"
        tools:itemCount="1"
        tools:listitem="@layout/item_my_quiz_boards" />

</androidx.constraintlayout.widget.ConstraintLayout>