<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/finish_signup_back_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/finish_signup_back_iv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/icon_back_btn_black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finish_signup_back_cl">

        <TextView
            android:id="@+id/finish_signup_nickname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            tools:text="00"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/finish_signup_nickname_sir_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sir"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/finish_signup_nickname_tv"
            app:layout_constraintStart_toEndOf="@id/finish_signup_nickname_tv"/>

        <TextView
            android:id="@+id/finish_signup_explanation_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_signup_explanation"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/finish_signup_nickname_tv"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/finish_signup_logo_iv"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/icon_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/finish_signup_next_btn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="96dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/start_moge"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn_select"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>